# GovTech-Assessment

./: Dockerfile  README.md  cloud_architecture_diagram.md  cloud_deployment.md  config.py  data_processing.py  index.html  main.py  output.txt  project_architecture_diagram.md  pyproject.toml
.github/worflows/: deploy.yml
.github/workflows/: deploy.yml
tests/: test_data_processing.py
