[tool.poetry]
name = "assessment-dependencies"
version = "0.1.0"
description = "packages to run code locally"
authors = ["pkpaing <pkpaing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
numpy = "^2.1.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
